# google-blacklist

./: .Makefile.am.kate-swp  .gitignore  LEGAL  Makefile  Makefile.am  Makefile.in  auto  config.status  configure  configure.ac  get_from_google  googet  hillary  output  output_english
autom4te.cache/: output.1  requests  traces.0  traces.1
src/: frontend.cpp  googet.cpp  main.cpp  shuffler.cpp
src/.deps/: googet-frontend.Po  googet-googet.Po  shuffler-googet.Po  shuffler-shuffler.Po
wordlists/: all_sorted  allwords  english  family-names  latin  phraselist  phrases  rootphrase
